<resources>
    <string name="app_name">ISPFieldTechApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageDescription">image description</string>
    <string name="ticketCardTitle">"Ticket %1$d: %2$s\n [%3$s]"</string>
    <string name="ticketNumberLabel">Ticket Number:</string>
    <string name="ticketNumberUnknown"><![CDATA[<Unknown>]]></string>
    <string name="technicianLabel">Technician:</string>
    <string name="technicianName"><![CDATA[<unknown technician>]]></string>
    <string name="creationDateLabel">Creation Date:</string>
    <string name="blankValue" />
    <string name="completionDate">Completion Date:</string>
    <string name="unknownCreationDate">01-Jan-1970</string>
    <string name="ticketStatus">Ticket Status:</string>
    <string name="commentLabelValue">Comment:</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="submitButtonValue">Submit</string>
    <string name="enterTicketNotesHere">Enter tickets notes here</string>
    <string name="customerLabel">Customer:</string>
    <string name="resetPasswordLink">Create Account or Reset Password</string>
    <string name="createResetPasswordLabel">Create Account/Reset Password</string>
</resources>